--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "parser"
   ],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "better-assert": "~1.0.0",
+    "mocha": "~1.9.0",
+    "should": "~1.2.2"
+  }
 }
