--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Parse a github git url and return the github repo url",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test.js --reporter spec --require should"
   },
   "repository": "",
   "keywords": [
