--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "better-assert": "~1.0.0",
     "mocha": "~1.9.0",
-    "should": "~1.2.2"
+    "should": "~1.2.2",
+    "standard": "^8.6.0",
+    "standard-version": "^3.0.0"
   }
 }
