--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "pretest": "standard",
-    "test": "nyc mocha test.js --reporter spec --require should"
+    "test": "nyc mocha test.js --reporter spec --require should",
+    "release": "standard-version"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,6 @@
     "nyc": "^10.0.0",
     "should": "^11.1.1",
     "standard": "^8.6.0",
-    "standard-version": "^3.0.0"
+    "standard-version": "^4.0.0-1"
   }
 }
